src/test/ui/error-codes/E0026.stderr
error[E0026]: struct `Thing` does not have a field named `z`
  --> $DIR/E0026.rs:19:23
   |
LL |         Thing { x, y, z } => {}
   |                       ^ struct `Thing` does not have field `z`

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0026"
